--- a/style.css
+++ b/style.css
@@ -1,493 +1,525 @@
-/*******
-
-Consider changing contact form padding to margin
-and adding 1rem to the p element's top margin
-
-*******/
-
-
-@viewport{
-    width: device-width;
+@viewport { width: device-width }
+@-ms-viewport { width: device-width }
+@font-face{
+	font-family: 'FontAwesome';
+	src: url('../fonts/fontawesome-webfont.eot?v=4.6.1');
+	src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.6.1') format('embedded-opentype'),url('../fonts/fontawesome-webfont.woff2?v=4.6.1') format('woff2'),url('../fonts/fontawesome-webfont.woff?v=4.6.1') format('woff'),url('../fonts/fontawesome-webfont.ttf?v=4.6.1') format('truetype'),url('../fonts/fontawesome-webfont.svg?v=4.6.1#fontawesomeregular') format('svg');
+	font-weight:normal;
+	font-style:normal;
 }
 
-@-ms-viewport{
-    width: device-width;
-}
-
-html{
-	font-size: 100%;
+html { 
+	font-size: 24px;
 	box-sizing: border-box;
-	font-family: 'Sintony', sans-serif;
-	-webkit-text-size-adjust: 100%;
 }
 
 *{ box-sizing: inherit;}
 
 body{
+	background-color: #888;
 	margin: 0;
-	background: #588c73;
-	color: #261c17;
+	font-family: sans-serif;
 }
 
-
-
-#top-nav{
-	position: fixed;
-	top: 0;
-	right: 0;
-	z-index: 1;
-
-	border: 2px solid #ede9ce;
-	color: #f4f1e1;
-	background-color: #261c17;
-
-	overflow: hidden;
-	width: 52px;
-	height: 52px;
-	border-radius: 26px;
-	margin: 0.5rem;
-	opacity: 0.75;
-	transition: width 0.5s ease, height 0.5s ease, opacity 0.5s ease;
-}
-#top-nav h2{
-	font-size: 1.35rem;
-	margin: 0;
-	font-weight: normal;
-}
-#top-nav ul{
-	margin: 1rem 0 0 0;
-	padding-left: 2rem;
-	list-style: none;
-}
-#top-nav li a{
-	color: #f4f1e1;
-	text-decoration: none;
-	display: inline-block;
-	margin: 0.5rem 0;
-}
-#top-nav li a:hover, #top-nav li a:focus, #top-nav li a:active{
-	text-decoration: underline;
-	outline: 0;
-}
-#mobile-menu{
-	position: absolute;
-	top: 0;
-	right: 0;
-	padding: 5px;
-}
-#mobile-menu:focus{
-	outline: 0;
-}
-
-#mobile-menu span{
-	display: block;
-	background-color: #ede9ce;
-	width: 22px;
-	margin: 8px;
-	height: 2px;
-	border-radius: 1px;
-	transition: transform 0.5s ease;
-}
-#top-nav.open{
-	width: calc(100vw - 1rem);
-	width: 13rem;
-	opacity: 1;
-}
-
-#mobile-menu{
-	position: absolute;
-	top: 0;
-	right: 0;
-	padding: 5px;
-}
-
-#top-nav.open .span-top{
-	transform: translateY(10px) rotateZ(-45deg) rotateY(180deg);
-}
-#top-nav.open .span-middle{
-	transform: rotateX(90deg);
-}
-#top-nav.open .span-bottom{
-	transform: translateY(-10px) rotateZ(45deg) rotateY(180deg);
-}
-
-
-#nav-wrap{
-	width: 90vw;
-	width: calc(100vw - 1rem - 4px);
-	width: 13rem;
-	position: absolute;
-	right: 0;
-	padding: 2rem;
-	overflow: hidden;
-}
-
-
-
-
-.vp-box{
-	display: flex;
-	justify-content: center;
-/*
-	align-items: center;
-*/
-	min-height: 100vh;
-	overflow: hidden;
+#eq-container{
+	box-shadow: 0 0 48px #444;
 	position: relative;
+	border-radius: 6px;
+	/*font-size: 100%;*/
+	width: 960px;
+	background-color: #6c8089;
+	margin: 48px auto;
+	overflow: hidden;
 }
 
-#about, #projects, #contact{
-	align-items: center;
+#top-controls, #settings-menu{
+	height: 72px;
+	overflow: hidden;
 }
-
-@media all and (min-aspect-ratio: 9/10){
-	#home {
-		align-items: center;
-	}
-}
-
-.content-wrap{
-	width: 100%;
-	margin: 1rem;
-	max-width: 70rem;
+#settings-menu{
+	background-color: #6c8089;
 	position: relative;
-}
-
-@media all and (min-width: 35em){
-	.content-wrap{
-		margin: 2em;
-	}
-}
-
-.vp-box h2{
-	font-size: 2em;
-	font-weight: normal;
-	font-family: 'Slabo 27px', serif;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-.vp-box:focus{
-	outline: 0;
+	z-index: 2;
 }
 
 
-
-#home{
-	color: #ede9ce;
+#parameters{
 	text-align: center;
-	/*text-shadow: 0.1em 0.1em 0.2em #261c17;*/
-}
-#home h1{
-	font-weight: normal;
-	font-family: 'Slabo 27px', serif;
-	font-size: 2em;
-	margin: 25vh 0 0 0;
-}
-#home p{
-	margin: 0;
-	/*font-size: 1.225em;   if not uppercase*/
-	text-transform: uppercase;
-	font-size: 1.038em;
-}/*
-@media all and (min-width: 60em){
-	#home:hover{
-		cursor: pointer;
-	}
-}
-*/
-
-@media all and (min-aspect-ratio: 9/10){
-	#home h1{
-		margin-top: 0;
-	}
+	display: block;
+	float: left;
+	width: 8.75%;
+	height: 492px;
+	padding: 12px;
+	overflow: hidden;
+	border-bottom: 1px dashed #0e1315;
+	border-top: 1px dashed #0e1315;
 }
 
-@media all and (min-width: 60em){
-	#home{
-		font-size: 120%;
-	}
-
-	.vp-box h2{
-		font-size: 2.4em;
-	}
+#monitor{
+	display: block;
+	float: left;
+	width: 91.25%;
+	height: 492px;
+	background-color: #0e1315;
+	overflow: hidden;
 }
 
-#canvas-home, #canvas-hidden, #canvas-copy{
+#filter-type{
+	border-radius: 3px;
+	background-color: #0e1315;
+	width: 48px;
+	margin: 0 auto;
+	height: 36px;
+	color: #0f0;
+	color: #eee;
+	font-size: 20px;
+	padding-top: 8px;
+}
+#filter-type:after{
+}
+
+
+/*.lowpass{
+	background-image: url(graphics/lowpass.png);
+}
+.highpass{
+	background-image: url(graphics/highpass.png);
+}
+.peak{
+	background-image: url(graphics/peak.png);
+}*/
+.controller-lowpass:after{
+	content: 'LP';
+}
+.controller-highpass:after{
+	content: 'HP';
+}
+.controller-peaking:after{
+	content: 'PK';
+}
+
+
+#level{
+	height: 240px;
+	width: 12px;
+	border-radius: 6px;
+	margin: 24px auto;
+	background-color: #0e1315;
+	position: relative;
+}
+#level .handle{
+	border-radius: 3px;
+	content: "";
+	width: 36px;
+	height: 24px;
+	background-color: #a3b0b5;
+	border: 2px solid #394d56;
+	position: absolute;
+	left: -12px;
+	bottom: -12px;
+	transform: translateY(0);
+	/*transition: transform 0.25s ease;*/
+}
+#level .range{
+	content: '';
+	position: absolute;
+	top: 120px;
+	left: 1px;
+	height: 1px;
+	width: 10px;
+	background-color: lime;
+	transform: scaleY(1);
+	transform-origin: 0 0;
+}
+
+
+.knob{
+	/*font-size: 70%;*/
+	background-color: #1c262b;
+	border-radius: 50%;
+	margin: 9px auto 0 auto;
+	width: 44px;
+	height: 44px;
+	position: relative;
+	transform: rotate(0deg);
+	transition: background-color 0.7s ease;
+}
+.knob:hover{
+	background-color: lime;
+}
+.knob:after{
+	content: "";
+	display: block;
+	width: 4px;
+	height: 4px;
+	background-color: lime;
+	position: absolute;
+	left: 20px;
+	top: 7px;
+	border-radius: 2px;
+}
+.knob:before{
+	content: "";
+	display: block;
+	width: 40px;
+	height: 40px;
+	background-color: #394d56;
+	position: absolute;
+	left: 2px;
+	top: 2px;
+	border-radius: 20px;	
+}
+
+
+#parameters span{
+	font-size: 66%;
+	overflow: hidden;
+	display: block;
+	margin-top: 4px;
+	margin-bottom: 14px;
+	font-weight: bold;
+}
+
+#bottom-controls{
+	width: 100%;
+	text-align: center;
+}
+
+#eq-settings{
+	background-color: #6c8089;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	transform: translateX(100%);
+	border-radius: 6px;
+	transition: transform 1s ease;
 }
 
-#canvas-hidden, #canvas-copy{
-	display: none;
+#eq-settings.shown{
+	transform: translateX(0);
 }
 
-#img-hidden{
-	display: none;
-}
-
-
-
-#about{
-	background-color: #ede9ce;
-}
-#about img{
-    display: block;
-    width: 100%
-}
-.img-wrap{
-    margin: 1.5rem 20%;
-	position: relative;
-    border-radius: 0.5rem;
-    overflow: hidden;
-}
-.img-overlay{
-    border-radius: 0.5rem;
-    box-shadow: 0.125rem 0.125rem 0.25rem #261c17 inset;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-#about p{
-	margin: 1rem;
-	line-height: 1.6;
-}
-
-
-@media all and (min-width: 35em){
-	.about-container{
-		padding: 1rem 2rem;
-	}
-	.img-wrap{
-		margin: 1rem auto;
-		width: 15rem;
-	}
-}
-@media all and (min-width: 45em){
-	.about-container{
-		display: flex;
-		align-items: center;
-	}
-	#about p{
-		float: right;
-		width: calc(66.66% - 2rem);
-	}
-	.img-wrap{
-		float: left;
-		width: calc(33.33% - 2rem);
-	}	
-}
-@media all and (min-width: 60em){
-	.about-container{
-		padding: 1rem 3rem;
-	}
-	#about p{
-		font-size: 1.2rem;
-		float: right;
-		width: calc(66.66% - 2rem);
-	}
-	.img-wrap{
-		float: left;
-		width: calc(33.33% - 2rem);
-	}
-}
-
-
-#projects{
-	background-color: #d96459;
-	color: #ede9ce;
-}
-
-.project{
-	position: relative;
-	margin: 1rem;
-	overflow: hidden;
-	border-radius: 0.5rem;
-	box-shadow: 0.125rem 0.125rem  0.25rem #261c17;
-	border: 2px solid #ede9ce;
-	width: 100%;
-	display: block;
-	z-index: 1;
-	background: #261c17;
-}
-
-.project-background{
-	border-radius: 0.5rem;
-	background: #261c17;
-	background-size: cover;
-	width: 100%;
-	padding-top: 56.25%;
-	transition: transform 0.75s ease, transform-origin 0.2s ease-out;
-}
-
-.project-overlay{
+#eq-loading-overlay{
+	background-color: rgba(0, 0, 0, 0.6);
 	position: absolute;
 	top: 0;
 	left: 0;
-	bottom: 0;
-	right: 0;
-	box-shadow: 0.25rem 0.25rem  0.5rem #261c17 inset;
-}
-
-.project span{
-	position: absolute;
-	bottom: 0;
-	display: block;
 	width: 100%;
-	background-color: rgba(38, 28, 23, 0.85);
-	color: #f4f1e1;
-	padding: 0.25rem;
-	text-align: center;
-	transform-origin: bottom center;
-	transition: transform 0.75s ease;
+	height: 100%;
+	border-radius: 6px;
+	display: none;
+	color: #fff;
+	font-size: 200%;
 }
 
-.projects-container{
-	margin-top: 1rem;
+#eq-loading-overlay.shown{
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
+	align-items: center;
+	justify-content: center;
 }
 
-@media all and (min-width: 35em){
-	.projects-container{
-		padding: 0 2rem;
-	}
-}
-
-@media all and (min-width: 42em){
-	.project{
-		width: 40%;
-		width: calc(50% - 2em);
-	}
-}
-
-@media all and (min-width: 60em){
-	.project{
-		width: 25%;
-		width: calc(33.33% - 2em);
-	}	
-	.projects-container{
-		padding: 0 3rem;
-	}
-}
-
-.project:focus{
-	outline: 0;
-}
-
-.project:hover .project-background, .project:focus .project-background,
-.project:active .project-background{
-	transform: scale(1.2);
-}
-
-.project:hover span, .project:focus span, .project:active span{
-	transform: rotateX(90deg);
-}
-
-#pa-tribute .project-background{
-	background-image: url('tribute.jpg');
-}
-#pa-cipher .project-background{
-	background-image: url('cipher.jpg');
-}
-#pa-beatschool .project-background{
-	background-image: url('beatschool.jpg');
-}
-
-
-
-
-
-#contact{
-	background-color: #ede9ce;
-}
-
-#contact-form{
-	padding: 0 1rem 1rem 1rem;
-}
-
-#contact-form label{
-	font-size: 1.2rem;
-	margin: 2.5rem 0 0.5rem 0;
-	font-weight: bold;
-	display: block;
-}
-
-#contact-form input, #contact-form textarea,
-#contact-form button{
-	display: block;
+/*
+#spectrum{
 	width: 100%;
-	border-radius: 2px;
-	font-family: 'Sintony', sans-serif;
-	font-size: 1rem;
-	padding: 0.5em 0;
+	height: 100%;
+}
+*/
+
+#eq-play, #eq-stop{
+	font-size: 13px;
+	border: 1px solid #666;
+	background-color: #eee;
+	margin: 18px;
+	margin-right: 0;
+	width: 48px;
+	height: 36px;
+	border-radius: 3px 0 0 3px;
+}
+#eq-stop{ 
+	margin-left: 0;
+	border-left: none;
+	border-radius: 0 3px 3px 0;
+}
+
+#eq-play:after{
+	color: #444;
+	content: '\f04b';
+	font-family: FontAwesome;
+}
+
+#eq-play.playing:after{
+	content: '\f04c'
+}
+
+#eq-stop:after{
+	color: #444;
+	content: '\f04d';
+	font-family: FontAwesome;
+}
+
+#eq-settings-btn, #eq-close-settings{
+	line-height: 36px;
+	font-size: 36px;
+
+	padding: 0;
+	margin: 18px;
 	border: none;
-	border-bottom: 2px solid #588c73;
-	background-color: #ede9ce;
-	color: #261c17;
+	background-color: transparent;
 }
-#contact-form textarea{
-	line-height: 1.6;
-	resize: vertical;
-	height: 8rem;
+
+#eq-settings-btn:after{
+	color: #eee;
+	content: '\f013';
+	font-family: FontAwesome;
 }
-#contact-form input:focus, #contact-form textarea:focus{
-	background-color: #fff;
-	padding: 0.5rem;
-	outline: 0;
+#eq-close-settings:after{
+	color: #eee;
+	content: '\f00d';
+	font-family: FontAwesome;
 }
-#contact-form button{
-	margin: 2.5rem auto 0 auto;
-	border: none;
-	background-color: #588c73;
-	color: #f4f1e1;
-	box-shadow: 0.125rem 0.125rem  0.25rem #261c17;
-	transition: background-color 0.5s ease;
+
+#top-controls button span, #settings-menu button span{
+	display: inline-block;
+	width: 0;
+	height: 0;
+	overflow: hidden;
 }
-#contact-form button:hover, #contact-form button:focus,
-#contact-form button:active{
-	outline: 0;
-	cursor: pointer;
-	background-color: #3d6250;
+
+#bottom-controls{
+	overflow: hidden;
 }
-#contact a{
-	color: #588c73;
-	text-decoration: none;
+
+#bottom-controls button{
+	border: 1px solid #666;
+	color: #444;
+	background-color: #eee;
+	font-size: 15px;
 	font-weight: bold;
-}
-#contact a:hover, #contact a:focus, #contact a:active{
-	text-decoration: underline;
-	outline: 0;
+	margin: 18px 9px;
+	width: 154px;
+	height: 36px;
+	border-radius: 3px;
 }
 
-#contact p{
+#eq-reference-toggle{
+	border: 1px solid #666;
+	color: #eee;
+	background-color: #0e1315;
+	font-size: 13px;
+	font-weight: bold;
+	margin: 18px;
+	width: 130px;
+	height: 36px;
+	border-radius: 3px;	
+}
+
+#eq-reference-toggle.active{
+	background-color: #00ff00;
+	color: #005500;
+}
+
+
+#eq-volume{
+	height: 12px;
+	width: 120px;
+	float: left;
+	border-radius: 6px;
+	margin: 30px auto;
+	margin-right: 18px;
+	background-color: #0e1315;
+	position: relative;
+}
+#eq-volume .handle{
+	border-radius: 12px;
+	content: "";
+	width: 18px;
+	height: 18px;
+	background-color: #eee;
+	position: absolute;
+	top: -3px;
+	left: -9px;
+	transform: translateX(0);
+	/*transition: transform 0.25s ease;*/
+}
+#eq-volume .range{
+	content: '';
+	position: absolute;
+	height: 10px;
+	width: 1px;
+	top: 1px;
+	left: 1px;
+	border-radius: 5px;
+	background-color: #444;
+}
+
+#eq-mute{
+	line-height: 36px;
+	font-size: 36px;
+	float: left;
+	padding: 0;
+	margin: 18px;
+	margin-right: 12px;
+	border: none;
+	background-color: transparent;
+}
+
+#eq-mute:after{
+	color: #eee;
+	content: '\f028';
+	font-family: FontAwesome;
+}
+
+.top-right{
+	display: inline-block;
+	float: right;
+}
+
+.menu-item{
+	color: #eee;
+	background-color: #444;
+	display: inline-block;
+	margin-top: 18px;
+	text-decoration: none;
+	border-radius: 12px 12px 0 0;
+	height: 54px;
+	padding: 18px;
+	font-size: 20px;
+	transition: background-color 0.6s ease-in;
+}
+.menu-item:first-child{
+	margin-left: 18px;
+}
+
+.menu-item.shown{
+	color: #444;
+	background-color: #eee;	
+}
+
+.settings-container{
+	position: absolute;
+	color: #444;
+	top: 72px;
+	padding: 36px;
+	left: 0;
+	margin: 0 18px;
+	width: 924px;
+	background-color: #444;
+	border-radius: 0 12px 12px 12px;
+	transition: transform 1s ease, background-color 0.6s ease-in;
+	height: 546px;
+	transform: translateY(-564px);
+}
+.settings-container.shown{
+	transform: translateY(0);
+	background-color: #eee;
+	z-index: 1;
+}
+
+.settings-container h3:first-child{
+	margin-top: 0;
+}
+
+.settings-container h3{
+	margin-top: 1.5em;
+	font-size: 118%;
+	margin-bottom: 0.5em;
+}
+
+.settings-container p{
+	font-size: 18px;
+	width: 80%;
+	margin: 0 auto;
+}
+
+.settings-container table{
+	width: 80%;
+	margin: 0 auto;
+}
+
+.settings-container select, .settings-container input,
+.settings-container button{
+	font-size: 18px;
+	display: inline-block;
+	padding: 3px;
+}
+.settings-container select, .settings-container input{
+	width: 100%;
+}
+
+.settings-container input[type="number"]{
+	padding-left: 6px;
+}
+
+th{
+	text-align: left;
+}
+
+td, th{
+	font-size: 22px;
+	padding: 6px;
+}
+
+td.null{
 	text-align: center;
-	margin: 1.5rem 1rem 1rem 1rem;
+}
+td.null:after{
+	content: "--";
+	font-size: 22px;
 }
 
-@media all and (min-width: 35em){
-	#contact-form{
-		padding: 0 3rem 1rem 3rem;
-	}
-	#contact-form button{
-		width: 15em;
-	}
-	#contact p{
-		margin: 1.5rem 3rem 1rem 3rem;
-	}
+#settings-presets{
+	width: 50%;
+	margin-left: 10%;
 }
-@media all and (min-width: 60em){
-	#contact-form{
-		padding: 0 4rem 1rem 4rem;
-	}
-	#contact p{
-		font-size: 1.1rem;
-		margin: 1.5rem 4rem 1rem 4rem;
-	}
+
+#audio-file-wrap{
+	height: 0;
+	overflow: hidden;
+}
+
+#track0-drag-drop{
+	background-color: #fff;
+	width: 80%;
+	height: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 3px 3px 10px #444 inset;
+	border-radius: 12px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 15%;
+	text-align: center;
+}
+
+#track0-drag-drop.error{
+	background-color: #fdd;
+}
+#track0-drag-drop.is-dragover:before{
+	content: 'Drop it Like it\'s Hot'
+}
+#track0-drag-drop.is-dragover span{
+	display: none;
+}
+
+#track0-load-custom-audio{
+	opacity: 0.4;
+}
+#track0-load-custom-audio.active{
+	opacity: 1;
+}
+#track0-load-custom-audio:hover{
+	cursor: default;
+}
+#track0-load-custom-audio.active:hover{
+	cursor: pointer;
+}
+
+.correct-answer{
+	box-shadow: 0 0 1em 0.5em #0F0
+}
+.wrong-answer{
+	box-shadow: 0 0 1em 0.5em #F00
 }
